Add application form on massage pages. Add its scripts

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -26,6 +26,7 @@
 @use 'blocks/reusable/picture';
 @use 'blocks/reusable/preloader';
 @use 'blocks/reusable/slider';
+@use 'blocks/reusable/sticker';
 @use 'blocks/reusable/table';
 @use 'blocks/reusable/text-input';
 @use 'blocks/reusable/tooltip';
