--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -104,6 +104,7 @@ block variables
     }
 
 block content
+  include ../includes/modules/content/application-form
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
 
