--- a/src/assets/scss/blocks/massage-choosing-test/test-slide.scss
+++ b/src/assets/scss/blocks/massage-choosing-test/test-slide.scss
@@ -52,6 +52,10 @@
             &::before {
               left: 1.2rem;
             }
+
+            &::after {
+              left: 1.7rem;
+            }
           }
         }
       }
