--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -103,6 +103,7 @@ block variables
     }
 
 block content
+  include ../includes/modules/content/application-form
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
 
