--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -102,6 +102,7 @@ block variables
     }
 
 block content
+  include ../includes/modules/content/application-form
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
 
