--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -108,6 +108,7 @@ block variables
     }
 
 block content
+  include ../includes/modules/content/application-form
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
 
