--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -106,6 +106,7 @@ block variables
     }
 
 block content
+  include ../includes/modules/content/application-form
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
 
