Add video-reviews block

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -119,5 +119,6 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-types
   include ../includes/modules/content/massage-choosing-test
+  include ../includes/modules/content/video-reviews
 
 block script
