--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -31,6 +31,7 @@
 @use 'blocks/reusable/text-input';
 @use 'blocks/reusable/tooltip';
 @use 'blocks/reusable/underline';
+@use 'blocks/reusable/video-block';
 
 // Common page styles
 @use 'blocks/page/page';
@@ -64,5 +65,7 @@
 @use 'blocks/massage-choosing-test/test-progress';
 @use 'blocks/massage-choosing-test/test-slide';
 @use 'blocks/massage-choosing-test/test-success';
+
+@use 'blocks/video-reviews/video-reviews';
 
 @use 'blocks/footer/page-footer';
