Add price list except success message of appointment form

--- a/src/assets/scss/blocks/application-form/application-form.scss
+++ b/src/assets/scss/blocks/application-form/application-form.scss
@@ -101,7 +101,7 @@
 .theme-8 {
   .application-form {
     &__background {
-      padding: 0;
+      padding: 0 2rem;
 
       background: none;
     }
