--- a/src/pug/includes/popups/popups-wrap.pug
+++ b/src/pug/includes/popups/popups-wrap.pug
@@ -1,3 +1,4 @@
 .popups-wrap
-  include popup-massage-test/popup-massage-test
+  include popup-massage-test
+  include popup-appointment
   .popups-wrap__bg-close(data-close-popup='all' role='button' aria-label='Закрыть все модальные окна')
