--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -105,6 +105,9 @@ block variables
             date: '20.01.2020'
           }
         ]
+      },
+      priceList: {
+        showPromo: true
       }
     }
 
