--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -110,15 +110,19 @@ block variables
             date: '20.01.2020'
           }
         ]
+      },
+      priceList: {
+        showPromo: true
       }
     }
 
 block content
-  include ../includes/modules/content/application-form
+  include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/features-list
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-types
   include ../includes/modules/content/massage-choosing-test
   include ../includes/modules/content/video-reviews
+  include ../includes/modules/content/price-list
 
 block script
