--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -40,6 +40,7 @@
 @use 'blocks/popups/popups-wrap';
 @use 'blocks/popups/popup';
 @use 'blocks/popups/popup-massage-test';
+@use 'blocks/popups/popup-appointment';
 
 // Different blocks
 @use 'blocks/header/page-header';
@@ -67,5 +68,9 @@
 @use 'blocks/massage-choosing-test/test-success';
 
 @use 'blocks/video-reviews/video-reviews';
+
+@use 'blocks/price-list/price-list';
+@use 'blocks/price-list/promotion-card';
+@use 'blocks/price-list/price-list-callback-form';
 
 @use 'blocks/footer/page-footer';
