--- a/src/pug/includes/modules/header/header.pug
+++ b/src/pug/includes/modules/header/header.pug
@@ -40,5 +40,4 @@ header.page-header
         - var phoneNumber = phone.replace(/[()\s-]/g, '')
         li.phones-list__phone
           a.phones-list__phone-number.link.undeline.underline_dotted.underline_gray-dotted(href=`tel:${phoneNumber}`)= phone
-    button.page-header__appointment-button.button.button_primary
-      span.button__content Записаться
+    button.page-header__appointment-button.button.button_primary Записаться
