--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -100,12 +100,16 @@ block variables
             date: '20.01.2020'
           }
         ]
+      },
+      priceList: {
+        showPromo: false
       }
     }
 
 block content
-  include ../includes/modules/content/application-form
+  include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/price-list
 
 block script
